--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@ override.tf.json
 
 terraform/providers.tf
 ansible/key.pem
+terraform/key.pem
+key.pem
 # Include override files you do wish to add to version control using negated pattern
 #
 # !example_override.tf
