--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ override.tf.json
 terraform/providers.tf
 terraform/key.pem
 ansible/key.pem
+ansible2/key.pem
 key.pem
 # Include override files you do wish to add to version control using negated pattern
 #
