--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,8 +3,8 @@ name: docker
 on:
   workflow_run:
     workflows:
-      - ansible
-    types: 
+      - Ansible
+    types:
       - completed
     branches:
       - main
