--- a/.github/workflows/ansible2.yml
+++ b/.github/workflows/ansible2.yml
@@ -44,6 +44,6 @@ jobs:
       - name: Ansible
         uses: saubermacherag/ansible-playbook-docker-action@v1.3
         with:
-          playbookName: 'ansible/deploy.yml'
-          inventoryFile: 'ansible/hosts'
+          playbookName: 'ansible2/deploy.yml'
+          inventoryFile: 'ansible2/hosts'
           keyFile: 'ansible/key.pem'
